--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "name": "projet",
   "private": true,
+  "homepage": "https://fadwaqarouach.site",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "vite build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "lucide-react": "^0.474.0",
